# td3-autonomous-robot-navigation

./: .gitignore  README.md  frames_2026-02-25_14.26.34.gv  frames_2026-02-25_14.27.39.gv
log/: latest_build
src/td3/launch/: manual_test.launch.py  robot_state_publisher.launch.py  test_simulation.launch.py
src/td3/launch/install/: local_setup.sh  setup.sh
src/td3/launch/log/: latest_build
src/td3/scripts/: test_4wheel_node.py  test_velodyne_node.py  train_velodyne_node.py
src/td3/scripts/pytorch_models/: td3_green_4wheel_actor.pth  td3_green_4wheel_critic.pth
src/td3/scripts/results/: td3_green_4wheel.npy
src/td3/scripts/runs/: events.out.tfevents.1771490232.sesa-ubntu.65214.0  events.out.tfevents.1771561497.sesa-ubntu.76951.0  events.out.tfevents.1771561572.sesa-ubntu.77444.0  events.out.tfevents.1771561651.sesa-ubntu.77943.0  events.out.tfevents.1771561797.sesa-ubntu.78651.0  events.out.tfevents.1771561942.sesa-ubntu.79372.0  events.out.tfevents.1772002141.sesa-ubntu.6944.0  events.out.tfevents.1772003016.sesa-ubntu.8739.0  (+9 more)
src/td3/urdf/: td_robot.urdf
src/td3_training/: package.xml  setup.py
src/td3_training/config/: td3_training.rviz
src/td3_training/launch/: train.launch.py  train_rviz.launch.py
src/td3_training/td3_training/: actor_critic.py  goal_gui.py  rviz_visualizer.py  td3_agent.py  td3_env.py  test_td3.py  train.py
src/td3_training/td3_training/logs/: training_log.csv
src/td3_training/td3_training/test/: README.md  conftest.py  test_navigator.py
src/td3_training/urdf/: td_robot.urdf
src/td3_training/worlds/: td3.world
(+31 files in other folders)
